--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "registerationwebapp",
+  "name": "studentregisteration_webapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.4"
   }
 }
